repair alignment of practice side.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -148,7 +148,7 @@ nav ul li {
 .info {
   display: flex;
   background-color: white;
-  align-items: center;
+  align-items: flex-start;
 }
 
 div.main {
@@ -157,12 +157,16 @@ div.main {
 
 .main img {
   width: 90%;
-  padding: 2rem 1.5rem;
+  padding-top: 1rem;
+  padding-bottom: 2rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 div.caption {
   padding-left: 1.5rem;
   width: 90%;
+  line-height: 1.25rem;
 }
 
 .info .additional {
@@ -205,6 +209,7 @@ div.event:hover {
 
 .event h2, .event p {
   padding-bottom: 0.5rem;
+  line-height: 1.25rem;
 }
 
 .event a {
